Fix Crash on Frame Priority Caching when Graphics Acceleration is Disabled.

Additional measures had to be taken to ensure that the frame cache exists before
requesting frame regeneration. Additionally, frame cache priority will also
ensure that the user wants background caching before attempting to prioritize
specific frames.

BUG:424037
(cherry picked from krita/4.3 commit 82c952ffbbb295720bc903ec8ab683d13a6bcddb)